# deadmanswitch

./: Cargo.toml  README.md  RETROSPECTIVE.md
.github/workflows/: ci.yml  deploy-frontend.yml
blockchain/: README.md
blockchain/pallets/deadman-switch/: Cargo.toml  README.md
blockchain/pallets/deadman-switch/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  tx_extensions.rs  weights.rs
blockchain/pallets/estate-executor/: Cargo.toml  README.md
blockchain/pallets/estate-executor/src/: benchmarking.rs  bequest.rs  certificate.rs  identity.rs  lib.rs  mock.rs  runtime_api.rs  tests.rs  tx_extensions.rs  weights.rs
blockchain/runtime/: Cargo.toml  README.md
blockchain/runtime/src/: genesis_config_presets.rs  lib.rs
blockchain/runtime/src/configs/: mod.rs
docs/: INSTALL.md
presentation/: README.md  index.html  styles.css
scripts/: README.md  common.sh  deploy-frontend.sh  e2e-tests.sh  open-hrmp.sh  seed-identities.sh  setup-asset-hub-proxies.sh  start-dev.sh  start-frontend.sh  start-zombienet.sh  test-phase3.sh  test-remote-transfer.sh  test-zombienet.sh
web/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
web/.papi/: polkadot-api.json
web/.papi/descriptors/: generated.json  package.json
web/.papi/metadata/: asset_hub.scale  people_chain.scale  stack_template.scale
web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
web/src/components/: Dropdown.tsx  OfflineBanner.tsx  ToastContainer.tsx
web/src/config/: fees.ts  network.ts
web/src/hooks/: useAllAccounts.ts  useChain.ts  useConnection.ts  useWalletAutoConnect.ts
web/src/pages/: AccountsPage.tsx  CertificatesPage.tsx  CreateSwitchPage.tsx  CreateWillPage.tsx  HomePage.tsx  IdentityPage.tsx  SwitchesPage.tsx  WillsPage.tsx
web/src/store/: chainStore.ts  toastStore.ts
web/src/utils/: format.ts  tx.ts
