[package]
name = "pallet-deadman-switch"
description = "A deadman switch pallet: lock funds with a heartbeat-based release to beneficiaries."
version = "0.1.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
codec = { features = ["derive"], workspace = true }
frame = { workspace = true, features = ["experimental", "runtime"], default-features = false }
scale-info = { features = ["derive"], workspace = true }

[dev-dependencies]
frame = { workspace = true, features = ["std", "experimental", "runtime"] }
sp-io = { workspace = true, features = ["std"] }
pallet-balances = { version = "46.0.0", default-features = false, features = ["std"] }
pallet-proxy = { version = "45.0.0", default-features = false, features = ["std"] }
pallet-multisig = { version = "45.0.0", default-features = false, features = ["std"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame/std",
	"scale-info/std",
]
runtime-benchmarks = [
	"frame/runtime-benchmarks",
]
try-runtime = [
	"frame/try-runtime",
]
