[package]
name = "pallet-deadman-switch"
description = "A deadman switch pallet: store calls that execute automatically if periodic heartbeats stop."
version = "0.1.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
codec = { features = ["derive"], workspace = true }
frame = { workspace = true, features = ["experimental", "runtime"], default-features = false }
scale-info = { features = ["derive"], workspace = true }

[dev-dependencies]
frame = { workspace = true, features = ["std", "experimental", "runtime"] }
sp-io = { workspace = true, features = ["std"] }
# Test pallets come from the polkadot-sdk meta-crate so their internal
# frame-support/frame-system versions always match `frame` above.
polkadot-sdk = { workspace = true, features = [
	"std",
	"pallet-balances",
	"pallet-proxy",
	"pallet-multisig",
	"pallet-scheduler",
] }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame/std",
	"scale-info/std",
]
runtime-benchmarks = [
	"frame/runtime-benchmarks",
]
try-runtime = [
	"frame/try-runtime",
]
